# ibus-sys

./: Cargo.toml  Gir.toml  build.rs
gir-files/: GLib-2.0.gir  GObject-2.0.gir  IBus-1.0.gir
src/: lib.rs
tests/: abi.rs  constant.c  layout.c
