[package]
name = "ibus-sys"
version = "0.0.1"
links = "ibus"
build = "build.rs"
[package.metadata.system-deps.ibus_1_0]
name = "ibus-1.0"
version = "0.0"

[package.metadata.system-deps.ibus_1_0.feature-versions]
v1_5_3 = "1.5.3"
v1_5_18 = "1.5.18"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "ibus_sys"

[dependencies]
libc = "0.2"
glib-sys = "0.10.0"
gio-sys = "0.10.0"
gobject-sys = "0.10.0"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_5_3 = []
v1_5_18 = ["v1_5_3"]
dox = []
